# datasets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clean_dir.sh  make_cifar.py  make_tiny_imagenet_200.py  pyproject.toml  release.py
